--- a/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
@@ -4,7 +4,7 @@ sidebar_label: Embeddings
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, TabbedSection, SectionTab, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Embeddings Operations \{#embeddings\}
@@ -25,17 +25,27 @@ Embeddings
 
 <SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<ExpandableSection>
+
+<ExpandableProperty slot="entry" id="inputs" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### inputs \{#operation-embeddings_v1_embeddings_post+request+inputs\}
 
-</Property>
+</div>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="model" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### model \{#operation-embeddings_v1_embeddings_post+request+model\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 ID of the model to use.
 
@@ -45,17 +55,31 @@ _Example:_
 mistral-embed
 ```
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="output_dimension" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
 
 ##### output_dimension \{#operation-embeddings_v1_embeddings_post+request+output_dimension\}
 
-</Property>
+</div>
 
-<Property typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="output_dtype" typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
 
 ##### output_dtype \{#operation-embeddings_v1_embeddings_post+request+output_dtype\}
 
-</Property>
+</div>
+
+</ExpandableProperty>
+
+</ExpandableSection>
 
 </SectionContent>
 
@@ -77,33 +101,49 @@ mistral-embed
 
 <SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+responses+200+application-json">
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### data \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data\}
-
-</Property>
+Successful Response
 
 <ExpandableSection>
 
-<SectionTitle slot="title" variant="default">
+<ExpandableProperty slot="entry" id="data" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-#### EmbeddingResponseData \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data\}
+<div slot="title">
 
-</SectionTitle>
+##### data \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data\}
 
-<SectionContent slot="content" variant="default">
+</div>
 
-<Property typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</ExpandableProperty>
+
+<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" parentId="data">
+
+<div slot="title">
+
+#### EmbeddingResponseData \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData\}
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="data_EmbeddingResponseData_embedding" parentId="data_EmbeddingResponseData" typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
 
 ##### embedding \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+embedding\}
 
-</Property>
+</div>
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="data_EmbeddingResponseData_index" parentId="data_EmbeddingResponseData" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
 
 ##### index \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+index\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -111,11 +151,19 @@ _Example:_
 0
 ```
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="data_EmbeddingResponseData_object" parentId="data_EmbeddingResponseData" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
 
 ##### object \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+EmbeddingResponseData+object\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -123,15 +171,19 @@ _Example:_
 embedding
 ```
 
-</SectionContent>
+</div>
 
-</ExpandableSection>
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<ExpandableProperty slot="entry" id="id" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### id \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+id\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -139,11 +191,19 @@ _Example:_
 cmpl-e5cc70bb28c444948073e77776eb30ef
 ```
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="model" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### model \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+model\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -151,11 +211,19 @@ _Example:_
 mistral-small-latest
 ```
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="object" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### object \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+object\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -163,27 +231,39 @@ _Example:_
 chat.completion
 ```
 
-<Property typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="usage" typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### usage \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage\}
 
-</Property>
+</div>
 
-<ExpandableSection>
+</ExpandableProperty>
 
-<SectionTitle slot="title" variant="default">
+<ExpandableBreakout slot="entry" id="usage_UsageInfo" parentId="usage">
 
-#### UsageInfo \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage\}
+<div slot="title">
 
-</SectionTitle>
+#### UsageInfo \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo\}
 
-<SectionContent slot="content" variant="default">
+</div>
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="usage_UsageInfo_completion_tokens" parentId="usage_UsageInfo" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### completion_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+completion_tokens\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -191,11 +271,19 @@ _Example:_
 34
 ```
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="usage_UsageInfo_prompt_tokens" parentId="usage_UsageInfo" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+prompt_tokens\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -203,11 +291,19 @@ _Example:_
 16
 ```
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="usage_UsageInfo_total_tokens" parentId="usage_UsageInfo" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### total_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+UsageInfo+total_tokens\}
 
-</Property>
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -215,7 +311,9 @@ _Example:_
 50
 ```
 
-</SectionContent>
+</div>
+
+</ExpandableProperty>
 
 </ExpandableSection>
 
@@ -229,67 +327,89 @@ _Example:_
 
 <SectionContent slot="content" variant="top-level" id="operation-embeddings_v1_embeddings_post+responses+200+422+application-json">
 
-<Property typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+Validation Error
+
+<ExpandableSection>
+
+<ExpandableProperty slot="entry" id="HttpMeta" typeInfo={{"label":"Security","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+Security\">Security</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### HttpMeta \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta\}
 
-</Property>
+</div>
 
-<ExpandableSection>
+</ExpandableProperty>
 
-<SectionTitle slot="title" variant="default">
+<ExpandableBreakout slot="entry" id="HttpMeta_Security" parentId="HttpMeta">
 
-#### Security \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta\}
+<div slot="title">
 
-</SectionTitle>
+#### Security \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+Security\}
 
-<SectionContent slot="content" variant="default">
+</div>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="HttpMeta_Security_ApiKey" parentId="HttpMeta_Security" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### ApiKey \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+HttpMeta+Security+ApiKey\}
 
-</Property>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
-</ExpandableSection>
+<ExpandableProperty slot="entry" id="detail" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+ValidationError\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+<div slot="title">
 
 ##### detail \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail\}
 
-</Property>
+</div>
 
-<ExpandableSection>
+</ExpandableProperty>
 
-<SectionTitle slot="title" variant="default">
+<ExpandableBreakout slot="entry" id="detail_ValidationError" parentId="detail">
 
-#### ValidationError \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail\}
+<div slot="title">
 
-</SectionTitle>
+#### ValidationError \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError\}
 
-<SectionContent slot="content" variant="default">
+</div>
 
-<Property typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="detail_ValidationError_loc" parentId="detail_ValidationError" typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### loc \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+loc\}
 
-</Property>
+</div>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="detail_ValidationError_msg" parentId="detail_ValidationError" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### msg \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+msg\}
 
-</Property>
+</div>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="detail_ValidationError_type" parentId="detail_ValidationError" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
 
 ##### type \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+ValidationError+type\}
 
-</Property>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
 </ExpandableSection>
 
