--- a/examples/nextra/petstore/src/app/api/tag/machines/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/machines/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Machines
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
+import { Pill, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/nextra";
 
 
 # Machines Operations [#machines]
@@ -14,183 +14,44 @@ _List machines_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Security [#operation-api_v2_machine_list+security]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_list+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_machine_list+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth [#operation-api_v2_machine_list+security+basicAuth]
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth [#operation-api_v2_machine_list+security+SchemeBasicAuth]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_list+security+SchemeBasicAuth+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password [#operation-api_v2_machine_list+security+SchemeBasicAuth+Password]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username [#operation-api_v2_machine_list+security+SchemeBasicAuth+Username]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth [#operation-api_v2_machine_list+security+cookieAuth]
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Parameters [#operation-api_v2_machine_list+parameters]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
 ##### limit [#operation-api_v2_machine_list+parameters+limit]
 
 Number of results to return per page.
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_list+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_machine_list+parameters+Security]
-
-</Property>
-
-Number of results to return per page.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
 ##### offset [#operation-api_v2_machine_list+parameters+offset]
 
 The initial index from which to return the results.
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_list+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_machine_list+parameters+Security]
-
-</Property>
-
-The initial index from which to return the results.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
 ##### q [#operation-api_v2_machine_list+parameters+q]
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_list+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_machine_list+parameters+Security]
-
-</Property>
-
-> Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
-Case-insensitive query applied on the `name` property. 
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -198,35 +59,31 @@ Case-insensitive query applied on the `name` property.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response [#operation-api_v2_machine_list+responses]
+### Responses [#operation-api_v2_machine_list+responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_machine_list+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_machine_list+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_list+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list+responses+200+application-json">
 
-<Section contentBorderVariant="all">
+<ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
+<ExpandableProperty slot="entry" id="count" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-#### Properties [#operation-api_v2_machine_list+200+application-json+properties]
+<div slot="title">
 
-</SectionTitle>
+##### count [#operation-api_v2_machine_list+responses+200+application-json+count]
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</div>
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### count [#operation-api_v2_machine_list+200+application-json+count]
-
-</Property>
+<div slot="content">
 
 _Example:_
 
@@ -234,15 +91,19 @@ _Example:_
 123
 ```
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<ExpandableProperty slot="entry" id="next" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### next [#operation-api_v2_machine_list+200+application-json+next]
+<div slot="title">
 
-</Property>
+##### next [#operation-api_v2_machine_list+responses+200+application-json+next]
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -250,15 +111,19 @@ _Example:_
 http://api.example.org/accounts/?offset=400&limit=100
 ```
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<ExpandableProperty slot="entry" id="previous" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### previous [#operation-api_v2_machine_list+200+application-json+previous]
+<div slot="title">
 
-</Property>
+##### previous [#operation-api_v2_machine_list+responses+200+application-json+previous]
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -266,45 +131,41 @@ _Example:_
 http://api.example.org/accounts/?offset=200&limit=100
 ```
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+200+application-json+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":[{"label":"MachineSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["url"],"name":"MachineSummary","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"MachineSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["url"],"name":"MachineSummary","defaultValue":null}}]}} typeAnnotations={[]}>
+<ExpandableProperty slot="entry" id="results" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### results [#operation-api_v2_machine_list+200+application-json+results]
+<div slot="title">
 
-</Property>
+##### results [#operation-api_v2_machine_list+responses+200+application-json+results]
 
-<ExpandableSection>
+</div>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+</ExpandableProperty>
 
-#### MachineSummary [#operation-api_v2_machine_list+200+application-json+MachineSummary]
+<ExpandableBreakout slot="entry" id="results_MachineSummary" parentId="results">
 
-</SectionTitle>
+<div slot="title">
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+#### MachineSummary [#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary]
 
-#### Properties [#operation-api_v2_machine_list+200+application-json+MachineSummary+properties]
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableBreakout>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<ExpandableProperty slot="entry" id="results_MachineSummary_url" parentId="results_MachineSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### url [#operation-api_v2_machine_list+200+application-json+MachineSummary+url]
+<div slot="title">
 
-</Property>
+##### url [#operation-api_v2_machine_list+responses+200+application-json+results+MachineSummary+url]
 
-</SectionContent>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
 </ExpandableSection>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -316,121 +177,35 @@ _Get machine_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Security [#operation-api_v2_machine_retrieve+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_retrieve+security+properties]
+### Security [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth [#operation-api_v2_machine_retrieve+security+basicAuth]
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth [#operation-api_v2_machine_retrieve+security+SchemeBasicAuth]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password [#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Password]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username [#operation-api_v2_machine_retrieve+security+SchemeBasicAuth+Username]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth [#operation-api_v2_machine_retrieve+security+cookieAuth]
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
+<SectionTitle slot="title" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Parameters [#operation-api_v2_machine_retrieve+parameters]
+### Parameters [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+parameters]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### id <Pill variant="warning">required</Pill> [#operation-api_v2_machine_retrieve+parameters+id]
+##### id <Pill variant="warning">required</Pill> [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+parameters+id]
 
 This parameter can be a string or an integer.
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_retrieve+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_machine_retrieve+parameters+Security]
-
-</Property>
-
-This parameter can be a string or an integer.
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -438,177 +213,153 @@ This parameter can be a string or an integer.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response [#operation-api_v2_machine_retrieve+responses]
+### Responses [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_machine_retrieve+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_machine_retrieve+200+application-json">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_retrieve+200+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### id [#operation-api_v2_machine_retrieve+200+application-json+id]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":[{"label":"ItemSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"ItemSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### item [#operation-api_v2_machine_retrieve+200+application-json+item]
-
-</Property>
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json">
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<ExpandableProperty slot="entry" id="id" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-#### ItemSummary [#operation-api_v2_machine_retrieve+200+application-json+ItemSummary]
+<div slot="title">
 
-</SectionTitle>
+##### id [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+id]
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+</div>
 
-#### Properties [#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+properties]
+</ExpandableProperty>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<ExpandableProperty slot="entry" id="item" typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<div slot="title">
 
-##### name [#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+name]
+##### item [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item]
 
-</Property>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<ExpandableBreakout slot="entry" id="item_ItemSummary" parentId="item">
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<div slot="title">
 
-##### url [#operation-api_v2_machine_retrieve+200+application-json+ItemSummary+url]
+#### ItemSummary [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary]
 
-</Property>
+</div>
 
-</SectionContent>
+</ExpandableBreakout>
 
-</SectionContent>
+<ExpandableProperty slot="entry" id="item_ItemSummary_name" parentId="item_ItemSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary+name]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="item_ItemSummary_url" parentId="item_ItemSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### url [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+ItemSummary+url]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="move" typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### move [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableBreakout slot="entry" id="move_MoveSummary" parentId="move">
+
+<div slot="title">
+
+#### MoveSummary [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary]
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="move_MoveSummary_name" parentId="move_MoveSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary+name]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="move_MoveSummary_url" parentId="move_MoveSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### url [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+MoveSummary+url]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="version_group" typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### version_group [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" parentId="version_group">
+
+<div slot="title">
+
+#### VersionGroupSummary [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary]
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="version_group_VersionGroupSummary_name" parentId="version_group_VersionGroupSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary+name]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="version_group_VersionGroupSummary_url" parentId="version_group_VersionGroupSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### url [#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+VersionGroupSummary+url]
+
+</div>
+
+</ExpandableProperty>
 
 </ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+MoveSummary\">MoveSummary</a>","children":[],"breakoutSubTypes":[{"label":"MoveSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"MoveSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### move [#operation-api_v2_machine_retrieve+200+application-json+move]
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### MoveSummary [#operation-api_v2_machine_retrieve+200+application-json+MoveSummary]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name [#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+name]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url [#operation-api_v2_machine_retrieve+200+application-json+MoveSummary+url]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":[{"label":"VersionGroupSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"VersionGroupSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### version_group [#operation-api_v2_machine_retrieve+200+application-json+version_group]
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### VersionGroupSummary [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+name]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### url [#operation-api_v2_machine_retrieve+200+application-json+VersionGroupSummary+url]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
