--- a/examples/docusaurus/petstore/docs/api/tag/utility.mdx
+++ b/examples/docusaurus/petstore/docs/api/tag/utility.mdx
@@ -4,7 +4,7 @@ sidebar_label: Utility
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, Property, ExpandableSection } from "@speakeasy-api/docs-md/docusaurus";
+import { Pill, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/docusaurus";
 
 
 # Utility Operations \{#utility\}
@@ -19,7 +19,7 @@ Languages for translations of API resource information.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Security \{#operation-api_v2_language_list-security\}
+### Security \{#operation-api_v2_language_list+security\}
 
 </SectionTitle>
 
@@ -35,27 +35,21 @@ Coming Soon
 
 <SectionTitle slot="title" variant="top-level">
 
-### Parameters \{#operation-api_v2_language_list-parameters\}
+### Parameters \{#operation-api_v2_language_list+parameters\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
-<SectionContent slot="content" variant="top-level">
-
-##### limit \{#operation-api_v2_language_list-parameters\}
+##### limit \{#operation-api_v2_language_list+parameters+limit\}
 
 Number of results to return per page.
 
-<SectionContent slot="content" variant="top-level">
-
-##### offset \{#operation-api_v2_language_list-parameters\}
+##### offset \{#operation-api_v2_language_list+parameters+offset\}
 
 The initial index from which to return the results.
 
-<SectionContent slot="content" variant="top-level">
-
-##### q \{#operation-api_v2_language_list-parameters\}
+##### q \{#operation-api_v2_language_list+parameters+q\}
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
@@ -66,25 +60,31 @@ Case-insensitive query applied on the `name` property.
 
 <TabbedSection>
 
-<SectionTitle slot="title" variant="top-level">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-api_v2_language_list+responses\}
+### Responses \{#operation-api_v2_language_list+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_language_list+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_language_list+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+responses+200+application-json">
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+<ExpandableSection>
 
-##### count \{#operation-api_v2_language_list+200+application-json+count\}
+<ExpandableProperty slot="entry" id="count" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-</Property>
+<div slot="title">
+
+##### count \{#operation-api_v2_language_list+responses+200+application-json+count\}
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -92,11 +92,19 @@ _Example:_
 123
 ```
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</div>
 
-##### next \{#operation-api_v2_language_list+200+application-json+next\}
+</ExpandableProperty>
 
-</Property>
+<ExpandableProperty slot="entry" id="next" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
+
+##### next \{#operation-api_v2_language_list+responses+200+application-json+next\}
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -104,11 +112,19 @@ _Example:_
 http://api.example.org/accounts/?offset=400&limit=100
 ```
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</div>
 
-##### previous \{#operation-api_v2_language_list+200+application-json+previous\}
+</ExpandableProperty>
 
-</Property>
+<ExpandableProperty slot="entry" id="previous" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
+
+##### previous \{#operation-api_v2_language_list+responses+200+application-json+previous\}
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -116,35 +132,49 @@ _Example:_
 http://api.example.org/accounts/?offset=200&limit=100
 ```
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+</div>
 
-##### results \{#operation-api_v2_language_list+200+application-json+results\}
+</ExpandableProperty>
 
-</Property>
+<ExpandableProperty slot="entry" id="results" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-<ExpandableSection>
+<div slot="title">
 
-<SectionTitle slot="title" variant="default">
+##### results \{#operation-api_v2_language_list+responses+200+application-json+results\}
 
-#### LanguageSummary \{#operation-api_v2_language_list+200+application-json+results\}
+</div>
 
-</SectionTitle>
+</ExpandableProperty>
 
-<SectionContent slot="content" variant="default">
+<ExpandableBreakout slot="entry" id="results_LanguageSummary" parentId="results">
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<div slot="title">
 
-##### name \{#operation-api_v2_language_list+200+application-json+results+LanguageSummary+name\}
+#### LanguageSummary \{#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\}
 
-</Property>
+</div>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableBreakout>
 
-##### url \{#operation-api_v2_language_list+200+application-json+results+LanguageSummary+url\}
+<ExpandableProperty slot="entry" id="results_LanguageSummary_name" parentId="results_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-</Property>
+<div slot="title">
 
-</SectionContent>
+##### name \{#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+name\}
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="results_LanguageSummary_url" parentId="results_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### url \{#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+url\}
+
+</div>
+
+</ExpandableProperty>
 
 </ExpandableSection>
 
@@ -162,7 +192,7 @@ Languages for translations of API resource information.
 
 <SectionTitle slot="title" variant="top-level">
 
-### Security \{#operation-api_v2_language_retrieve-security\}
+### Security \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+security\}
 
 </SectionTitle>
 
@@ -178,15 +208,13 @@ Coming Soon
 
 <SectionTitle slot="title" variant="top-level">
 
-### Parameters \{#operation-api_v2_language_retrieve-parameters\}
+### Parameters \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters\}
 
 </SectionTitle>
 
 <SectionContent slot="content" variant="top-level">
 
-<SectionContent slot="content" variant="top-level">
-
-##### id <Pill variant="warning">required</Pill> \{#operation-api_v2_language_retrieve-parameters\}
+##### id <Pill variant="warning">required</Pill> \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters+id\}
 
 This parameter can be a string or an integer.
 
@@ -196,107 +224,143 @@ This parameter can be a string or an integer.
 
 <TabbedSection>
 
-<SectionTitle slot="title" variant="top-level">
+<SectionTitle slot="title" variant="default">
 
-### Response \{#operation-api_v2_language_retrieve+responses\}
+### Responses \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses\}
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_language_retrieve+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_retrieve+200+application-json">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### id \{#operation-api_v2_language_retrieve+200+application-json+id\}
-
-</Property>
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### iso3166 \{#operation-api_v2_language_retrieve+200+application-json+iso3166\}
-
-</Property>
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### iso639 \{#operation-api_v2_language_retrieve+200+application-json+iso639\}
-
-</Property>
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_language_retrieve+200+application-json+name\}
-
-</Property>
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### names \{#operation-api_v2_language_retrieve+200+application-json+names\}
-
-</Property>
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json">
 
 <ExpandableSection>
 
-<SectionTitle slot="title" variant="default">
+<ExpandableProperty slot="entry" id="id" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-#### LanguageName \{#operation-api_v2_language_retrieve+200+application-json+names\}
+<div slot="title">
 
-</SectionTitle>
+##### id \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+id\}
 
-<SectionContent slot="content" variant="default">
+</div>
 
-<Property typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+</ExpandableProperty>
 
-##### language \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language\}
+<ExpandableProperty slot="entry" id="iso3166" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-</Property>
+<div slot="title">
 
-<ExpandableSection>
+##### iso3166 \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso3166\}
 
-<SectionTitle slot="title" variant="default">
+</div>
 
-#### LanguageSummary \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language\}
+</ExpandableProperty>
 
-</SectionTitle>
+<ExpandableProperty slot="entry" id="iso639" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<SectionContent slot="content" variant="default">
+<div slot="title">
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+##### iso639 \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso639\}
 
-##### name \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language+LanguageSummary+name\}
+</div>
 
-</Property>
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<ExpandableProperty slot="entry" id="name" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### url \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+language+LanguageSummary+url\}
+<div slot="title">
 
-</Property>
+##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+name\}
 
-</SectionContent>
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="names" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### names \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names\}
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableBreakout slot="entry" id="names_LanguageName" parentId="names">
+
+<div slot="title">
+
+#### LanguageName \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\}
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_language" parentId="names_LanguageName" typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### language \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language\}
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" parentId="names_LanguageName_language">
+
+<div slot="title">
+
+#### LanguageSummary \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary\}
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_language_LanguageSummary_name" parentId="names_LanguageName_language_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+name\}
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_language_LanguageSummary_url" parentId="names_LanguageName_language_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### url \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+url\}
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_name" parentId="names_LanguageName" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+name\}
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="official" typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
+
+##### official \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+official\}
+
+</div>
+
+</ExpandableProperty>
 
 </ExpandableSection>
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name \{#operation-api_v2_language_retrieve+200+application-json+names+LanguageName+name\}
-
-</Property>
-
-</SectionContent>
-
-</ExpandableSection>
-
-<Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
-
-##### official \{#operation-api_v2_language_retrieve+200+application-json+official\}
-
-</Property>
 
 </SectionContent>
 
