--- a/examples/nextra/petstore/src/app/api/tag/utility/page.mdx
+++ b/examples/nextra/petstore/src/app/api/tag/utility/page.mdx
@@ -3,7 +3,7 @@ sidebarTitle: Utility
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, Property, ExpandableSection, TabbedSection, SectionTab } from "@speakeasy-api/docs-md/nextra";
+import { Pill, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout } from "@speakeasy-api/docs-md/nextra";
 
 
 # Utility Operations [#utility]
@@ -14,183 +14,44 @@ _List languages_
 
 Languages for translations of API resource information.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Security [#operation-api_v2_language_list+security]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_list+security+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_language_list+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth [#operation-api_v2_language_list+security+basicAuth]
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth [#operation-api_v2_language_list+security+SchemeBasicAuth]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_list+security+SchemeBasicAuth+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password [#operation-api_v2_language_list+security+SchemeBasicAuth+Password]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username [#operation-api_v2_language_list+security+SchemeBasicAuth+Username]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth [#operation-api_v2_language_list+security+cookieAuth]
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
 ### Parameters [#operation-api_v2_language_list+parameters]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
 ##### limit [#operation-api_v2_language_list+parameters+limit]
 
 Number of results to return per page.
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_list+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_language_list+parameters+Security]
-
-</Property>
-
-Number of results to return per page.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
 ##### offset [#operation-api_v2_language_list+parameters+offset]
 
 The initial index from which to return the results.
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_list+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_language_list+parameters+Security]
-
-</Property>
-
-The initial index from which to return the results.
-
-</SectionContent>
-
-</Section>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
 
 ##### q [#operation-api_v2_language_list+parameters+q]
 
 > Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
 Case-insensitive query applied on the `name` property. 
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_list+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_language_list+parameters+Security]
-
-</Property>
-
-> Only available locally and not at [pokeapi.co](https://pokeapi.co/docs/v2)
-Case-insensitive query applied on the `name` property. 
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -198,35 +59,31 @@ Case-insensitive query applied on the `name` property.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response [#operation-api_v2_language_list+responses]
+### Responses [#operation-api_v2_language_list+responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_language_list+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_language_list+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_list+200+application-json">
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+responses+200+application-json">
 
-<Section contentBorderVariant="all">
+<ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
+<ExpandableProperty slot="entry" id="count" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-#### Properties [#operation-api_v2_language_list+200+application-json+properties]
+<div slot="title">
 
-</SectionTitle>
+##### count [#operation-api_v2_language_list+responses+200+application-json+count]
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</div>
 
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### count [#operation-api_v2_language_list+200+application-json+count]
-
-</Property>
+<div slot="content">
 
 _Example:_
 
@@ -234,15 +91,19 @@ _Example:_
 123
 ```
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<ExpandableProperty slot="entry" id="next" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### next [#operation-api_v2_language_list+200+application-json+next]
+<div slot="title">
 
-</Property>
+##### next [#operation-api_v2_language_list+responses+200+application-json+next]
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -250,15 +111,19 @@ _Example:_
 http://api.example.org/accounts/?offset=400&limit=100
 ```
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":[]}],"breakoutSubTypes":[]}} typeAnnotations={[]}>
+<ExpandableProperty slot="entry" id="previous" typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### previous [#operation-api_v2_language_list+200+application-json+previous]
+<div slot="title">
 
-</Property>
+##### previous [#operation-api_v2_language_list+responses+200+application-json+previous]
+
+</div>
+
+<div slot="content">
 
 _Example:_
 
@@ -266,55 +131,51 @@ _Example:_
 http://api.example.org/accounts/?offset=200&limit=100
 ```
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+200+application-json+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}} typeAnnotations={[]}>
+<ExpandableProperty slot="entry" id="results" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[]}>
 
-##### results [#operation-api_v2_language_list+200+application-json+results]
+<div slot="title">
 
-</Property>
+##### results [#operation-api_v2_language_list+responses+200+application-json+results]
 
-<ExpandableSection>
+</div>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+</ExpandableProperty>
 
-#### LanguageSummary [#operation-api_v2_language_list+200+application-json+LanguageSummary]
+<ExpandableBreakout slot="entry" id="results_LanguageSummary" parentId="results">
 
-</SectionTitle>
+<div slot="title">
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+#### LanguageSummary [#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary]
 
-#### Properties [#operation-api_v2_language_list+200+application-json+LanguageSummary+properties]
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableBreakout>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<ExpandableProperty slot="entry" id="results_LanguageSummary_name" parentId="results_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### name [#operation-api_v2_language_list+200+application-json+LanguageSummary+name]
+<div slot="title">
 
-</Property>
+##### name [#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+name]
 
-</SectionContent>
+</div>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+</ExpandableProperty>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<ExpandableProperty slot="entry" id="results_LanguageSummary_url" parentId="results_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-##### url [#operation-api_v2_language_list+200+application-json+LanguageSummary+url]
+<div slot="title">
 
-</Property>
+##### url [#operation-api_v2_language_list+responses+200+application-json+results+LanguageSummary+url]
 
-</SectionContent>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
 </ExpandableSection>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -326,121 +187,35 @@ _Get language_
 
 Languages for translations of API resource information.
 
-<Section contentBorderVariant="default">
+<Section variant="top-level">
 
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
+<SectionTitle slot="title" variant="top-level">
 
-### Security [#operation-api_v2_language_retrieve+security]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_retrieve+security+properties]
+### Security [#operation-api_v2_language_list+operation-api_v2_language_retrieve+security]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-<Property typeInfo={{"label":"SchemeBasicAuth","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+security+SchemeBasicAuth\">SchemeBasicAuth</a>","children":[],"breakoutSubTypes":[{"label":"SchemeBasicAuth","schema":{"type":"object","description":null,"examples":[],"properties":{"Password":{"type":"string","description":null,"examples":[],"defaultValue":null},"Username":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["Username","Password"],"name":"SchemeBasicAuth","defaultValue":null}}]}} typeAnnotations={[]}>
-
-##### basicAuth [#operation-api_v2_language_retrieve+security+basicAuth]
-
-</Property>
-
-<ExpandableSection>
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
-
-#### SchemeBasicAuth [#operation-api_v2_language_retrieve+security+SchemeBasicAuth]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_retrieve+security+SchemeBasicAuth+properties]
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Password [#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Password]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Username [#operation-api_v2_language_retrieve+security+SchemeBasicAuth+Username]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### cookieAuth [#operation-api_v2_language_retrieve+security+cookieAuth]
-
-</Property>
+Coming Soon
 
 </SectionContent>
 
 </Section>
 
-</SectionContent>
+<Section variant="top-level">
 
-</Section>
+<SectionTitle slot="title" variant="top-level">
 
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="default" paddingVariant="default">
-
-### Parameters [#operation-api_v2_language_retrieve+parameters]
+### Parameters [#operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters]
 
 </SectionTitle>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<SectionContent slot="content" variant="top-level">
 
-##### id <Pill variant="warning">required</Pill> [#operation-api_v2_language_retrieve+parameters+id]
+##### id <Pill variant="warning">required</Pill> [#operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters+id]
 
 This parameter can be a string or an integer.
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_retrieve+parameters+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### Security [#operation-api_v2_language_retrieve+parameters+Security]
-
-</Property>
-
-This parameter can be a string or an integer.
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
@@ -448,161 +223,143 @@ This parameter can be a string or an integer.
 
 <TabbedSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<SectionTitle slot="title" variant="default">
 
-### Response [#operation-api_v2_language_retrieve+responses]
+### Responses [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses]
 
 </SectionTitle>
 
-<SectionTab slot="tab" id="operation-api_v2_language_retrieve+200+application-json">
+<SectionTab slot="tab" id="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json">
 
 200
 
 </SectionTab>
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default" id="operation-api_v2_language_retrieve+200+application-json">
-
-<Section contentBorderVariant="all">
-
-<SectionTitle slot="title" borderVariant="none" paddingVariant="default">
-
-#### Properties [#operation-api_v2_language_retrieve+200+application-json+properties]
-
-</SectionTitle>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### id [#operation-api_v2_language_retrieve+200+application-json+id]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### iso3166 [#operation-api_v2_language_retrieve+200+application-json+iso3166]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### iso639 [#operation-api_v2_language_retrieve+200+application-json+iso639]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name [#operation-api_v2_language_retrieve+200+application-json+name]
-
-</Property>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":[{"label":"LanguageName","schema":{"type":"object","description":null,"examples":[],"properties":{"language":{"type":"chunk","chunkId":"$18"},"name":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","language"],"name":"LanguageName","defaultValue":null}}]}],"breakoutSubTypes":[{"label":"LanguageName","schema":{"type":"object","description":null,"examples":[],"properties":{"language":{"type":"chunk","chunkId":"$18"},"name":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","language"],"name":"LanguageName","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### names [#operation-api_v2_language_retrieve+200+application-json+names]
-
-</Property>
+<SectionContent slot="content" variant="top-level" id="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json">
 
 <ExpandableSection>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<ExpandableProperty slot="entry" id="id" typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-#### LanguageName [#operation-api_v2_language_retrieve+200+application-json+LanguageName]
+<div slot="title">
 
-</SectionTitle>
+##### id [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+id]
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+</div>
 
-#### Properties [#operation-api_v2_language_retrieve+200+application-json+LanguageName+properties]
+</ExpandableProperty>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<ExpandableProperty slot="entry" id="iso3166" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<Property typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":[{"label":"LanguageSummary","schema":{"type":"object","description":null,"examples":[],"properties":{"name":{"type":"string","description":null,"examples":[],"defaultValue":null},"url":{"type":"string","description":null,"examples":[],"defaultValue":null}},"required":["name","url"],"name":"LanguageSummary","defaultValue":null}}]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<div slot="title">
 
-##### language [#operation-api_v2_language_retrieve+200+application-json+LanguageName+language]
+##### iso3166 [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso3166]
 
-</Property>
+</div>
 
-<ExpandableSection>
+</ExpandableProperty>
 
-<SectionTitle slot="title" borderVariant="none" paddingVariant="none">
+<ExpandableProperty slot="entry" id="iso639" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-#### LanguageSummary [#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary]
+<div slot="title">
 
-</SectionTitle>
+##### iso639 [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso639]
 
-<SectionContent slot="content" borderVariant="default" paddingVariant="default">
+</div>
 
-#### Properties [#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+properties]
+</ExpandableProperty>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<ExpandableProperty slot="entry" id="name" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<div slot="title">
 
-##### name [#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+name]
+##### name [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+name]
 
-</Property>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
+<ExpandableProperty slot="entry" id="names" typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
 
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+<div slot="title">
 
-##### url [#operation-api_v2_language_retrieve+200+application-json+LanguageName+LanguageSummary+url]
+##### names [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names]
 
-</Property>
+</div>
 
-</SectionContent>
+</ExpandableProperty>
 
-</SectionContent>
+<ExpandableBreakout slot="entry" id="names_LanguageName" parentId="names">
+
+<div slot="title">
+
+#### LanguageName [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName]
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_language" parentId="names_LanguageName" typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### language [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" parentId="names_LanguageName_language">
+
+<div slot="title">
+
+#### LanguageSummary [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary]
+
+</div>
+
+</ExpandableBreakout>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_language_LanguageSummary_name" parentId="names_LanguageName_language_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+name]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_language_LanguageSummary_url" parentId="names_LanguageName_language_LanguageSummary" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### url [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+language+LanguageSummary+url]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="names_LanguageName_name" parentId="names_LanguageName" typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
+
+<div slot="title">
+
+##### name [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+LanguageName+name]
+
+</div>
+
+</ExpandableProperty>
+
+<ExpandableProperty slot="entry" id="official" typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}} typeAnnotations={[]}>
+
+<div slot="title">
+
+##### official [#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+official]
+
+</div>
+
+</ExpandableProperty>
 
 </ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":[]}} typeAnnotations={[{"title":"required","variant":"warning"}]}>
-
-##### name [#operation-api_v2_language_retrieve+200+application-json+LanguageName+name]
-
-</Property>
-
-</SectionContent>
-
-</SectionContent>
-
-</ExpandableSection>
-
-</SectionContent>
-
-<SectionContent slot="content" borderVariant="all" paddingVariant="default">
-
-<Property typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":[]}} typeAnnotations={[]}>
-
-##### official [#operation-api_v2_language_retrieve+200+application-json+official]
-
-</Property>
-
-</SectionContent>
-
-</Section>
 
 </SectionContent>
 
